fix: (searchbar) fixed styling bug with height of search-results on mobile when scroll is active

--- a/components/src/components/header/header.scss
+++ b/components/src/components/header/header.scss
@@ -878,7 +878,7 @@
           top: 0;
           left: 0;
           right: 0;
-          height: 100vh;
+          min-height: 100vh;
         }
       }
 
